# LearnQLearning

./: .gitignore  Action.h  Makefile  Q.cpp  Q.h  Readme.md  State.cpp  State.h  Utility.cpp  main.cpp
2048_R/: Agent.h  Board.h  CMakeLists.txt  GameManager.h  Utility.cpp  Utility.h  main.cpp  plot.py
2048_R/ConvNet/: ActivationLayer.cpp  ActivationLayer.h  CMakeLists.txt  ConvNet.cpp  ConvNet.h  ConvolutionLayer.cpp  ConvolutionLayer.h  DenseLayer.cpp  DenseLayer.h  FlattenLayer.cpp  FlattenLayer.h  Layer.h  Parser.cpp  Parser.h  PoolLayer.cpp  PoolLayer.h  README.md  SoftMaxLayer.cpp  SoftMaxLayer.h  Utility.cpp  Utility.h  main.cpp  test.cpp
2048_RR/: Agent.h  CMakeLists.txt  GameManager.h  Layer.h  Utility.cpp  Utility.h
Agent/: Agent.cpp  Agent.py
Framework_2/TicTacToe/: Makefile
Framework_3/: Agent.h
GridWorld/: Action.cpp  Makefile  Utility.h
Tetris/: .gitignore  Description.txt  Net.py  README.md  Tetris.py  agent  main.py  profile.txt  profile_2.txt  profile_3.txt
TicTacToe/: .gitignore  Action.cpp  Action.h  Makefile  ModelFreeQ.h  Readme.md  State.h  TicTacToeQ.cpp  TicTacToeQ.h  main.cpp
interface/: ModelBasedState.h  ModelFreeState.h  Q.cpp  Q.h  Readme.md  State.h  TicTacToeQ.cpp  TicTacToeQ.h  TicTacToeState.cpp  TicTacToeState.h  Utility.cpp  main.cpp  run.bash
